--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "¿Prefiere elegir su propia contraseña? Haga clic aquí.",
   "clear_results": "Limpiar Resultados",
   "clear_search_results": "Limpiar Resultados de Búsqueda",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Haga clic aquí para saber más sobre esto.",
   "click_here_to_enable": "Haga clic aquí para activarlo.",
+  "click_to_claim": "Haga clic aquí para reclamar su ráfaga libre.",
   "close": "Cerrar",
   "comment": "Comentario",
   "complete": "Completo",
@@ -908,12 +908,12 @@
   "you_received_assets": "Has recibido <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "Usted recibió <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "Has recibido un mensaje <a href='#'data-goto-messages-account='__account__'> </a> de __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Usted vendió o transfirió <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "Ha puesto este alias a la venta.",
   "your_name": "Su Nombre",
   "your_passphrase": "Su Contraseña",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
