--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "Untuk memilih password Anda sendiri? Klik di sini.",
   "clear_results": "Hapus hasil",
   "clear_search_results": "Menghapus Hasil Pencarian",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Klik di sini untuk mengetahui lebih banyak tentang itu",
   "click_here_to_enable": "Klik di sini untuk mengaktifkannya.",
+  "click_to_claim": "Klik di sini untuk mengklaim Burst gratis Anda.",
   "close": "Tutup",
   "comment": "Komentar",
   "complete": "Menyelesaikan",
@@ -908,12 +908,12 @@
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "Anda menawarkan alias ini untuk dijual.",
   "your_name": "Namamu",
   "your_passphrase": "Kata sandi",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
