--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "Vuoi scegliere la propria passphrase? Clicca qui.",
   "clear_results": "Clear Results",
   "clear_search_results": "Rimuovi risultati di ricerca",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Clicca qui per saperne di più",
   "click_here_to_enable": "Clicca qui per attivarlo.",
+  "click_to_claim": "Clicca qui per richiedere il tuo Burst gratuito.",
   "close": "Chiudi",
   "comment": "Commento",
   "complete": "Completo",
@@ -908,12 +908,12 @@
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "Stai per mettere in vendita questo alias.",
   "your_name": "Il tuo nome",
   "your_passphrase": "La tua Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
