--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "独自のパスフレーズを選択したい場合は、ここをクリックしてください。",
   "clear_results": "結果をクリア",
   "clear_search_results": "検索結果をクリア",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "それについての詳細を知るためにここをクリックしてください",
   "click_here_to_enable": "有効にするには、ここをクリックしてください。",
+  "click_to_claim": "あなたの無料バーストを請求するにはここをクリックしてください。",
   "close": "閉じる",
   "comment": "コメント",
   "complete": "完了",
@@ -908,12 +908,12 @@
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "あなたはこのエイリアスを売りに出しています。",
   "your_name": "名前",
   "your_passphrase": "あなたのパスフレーズ",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
