--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -133,10 +133,10 @@
   "choose_own_passphrase": "Want to choose your own passphrase? Click here.",
   "clear_results": "Clear Results",
   "clear_search_results": "Clear Search Results",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Click here to know more about it",
   "click_here_to_enable": "Click here to enable it.",
   "click_to_apply": "Click to apply",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_to_refresh": "Click to refresh",
   "close": "Close",
   "comment": "Comment",
@@ -921,12 +921,12 @@
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "You are offering this alias for sale.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
