--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "¿Prefire elexila súa propia contrasinal? faga clic aquí.",
   "clear_results": "Clear Results",
   "clear_search_results": "Limpar resultados de búsqueda",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Fai clic aquí para saber máis sobre el",
   "click_here_to_enable": "Faga clic aquí para activalo.",
+  "click_to_claim": "Fai clic aquí para reclamar a explosión gratuíta.",
   "close": "Close",
   "comment": "Comentario",
   "complete": "Completo",
@@ -908,12 +908,12 @@
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "Esta poñendo a venta este alias.",
   "your_name": "O seu nome",
   "your_passphrase": "O seu contrasinal",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
