--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "Chcete si zvoliť svoje vlastné heslo? Kliknite sem.",
   "clear_results": "Vymazať výsledky",
   "clear_search_results": "Vymazať výsledky vyhľadávania",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Kliknite tu a dozviete sa viac o ňom",
   "click_here_to_enable": "Kliknite sem pre aktiváciu.",
+  "click_to_claim": "Kliknite tu, aby ste si uplatnili nárok na bezplatný burst.",
   "close": "Zavrieť",
   "comment": "Komentár",
   "complete": "Hotovo",
@@ -908,12 +908,12 @@
   "you_received_assets": "Prijali ste majetok <a href='#' data-goto-asset='__asset__'>1 __name__</a>.",
   "you_received_assets_plural": "Prijali ste majetok <a href='#' data-goto-asset='__asset__'>__count__ __name__</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Predali ste alebo previedli majetok <a href='#' data-goto-asset='__asset__'>1 __name__</a>.",
   "you_sold_assets_plural": "Predali ste alebo previedli majetok <a href='#' data-goto-asset='__asset__'>__count__ __name__</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "Ponúkate tento alias na predaj.",
   "your_name": "Vaše Meno",
   "your_passphrase": "Vaše heslo",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
