--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "Kendi şifrenizi oluşturmak için tıklayın.",
   "clear_results": "Sonuçları sil",
   "clear_search_results": "Arama sonuçlarını sil",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Daha fazla bilgi edinmek için buraya tıklayın.",
   "click_here_to_enable": "Etkinleştirmek için tıklatın.",
+  "click_to_claim": "Ücretsiz Çekiminizi talep etmek için buraya tıklayın.",
   "close": "Kapat",
   "comment": "Yorum",
   "complete": "Tamamlanmış",
@@ -908,12 +908,12 @@
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
   "your_address": "Your Address",
   "your_alias_sale_offer": "Bu rumuzu satışa sunuyorsunuz.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
