--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -133,9 +133,9 @@
   "choose_own_passphrase": "想選擇您自己的密碼? 請單擊此處。",
   "clear_results": "清除結果",
   "clear_search_results": "清除搜尋結果",
-  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "點擊此處啟用它。",
+  "click_to_claim": "点击此处声明您的免费Burst。",
   "close": "關閉​​​",
   "comment": "評論",
   "complete": "完成",
@@ -908,12 +908,12 @@
   "you_received_assets": "您收到 <a href='#' data-goto-asset='__asset__'> 1 __name__ 資產</a>。",
   "you_received_assets_plural": "您收到 <a href='#' data-goto-asset='__asset__'> __count__ __name__ 資產</a>。",
   "you_received_message": "You received a <a href='#' data-goto-messages-account='__account__'>message</a> from __name__.",
+  "you_sent_burst": "You sent Burst",
   "you_sold_assets": "您出售或轉讓 <a href='#' data-goto-asset='__asset__'> 1 __name__ 資產</a>。",
   "you_sold_assets_plural": "您出售或轉讓 <a href='#' data-goto-asset='__asset__'> __count__ __name__ 資產</a>。",
   "your_address": "Your Address",
   "your_alias_sale_offer": "您的該別名正在出售。",
   "your_name": "您的名字",
   "your_passphrase": "您的密碼",
-  "youve_got_burst": "You've got Burst!",
-  "you_sent_burst": "You sent Burst"
+  "youve_got_burst": "You've got Burst!"
 }
